[gd_scene load_steps=4 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api/gjapi.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api/gj_icon.png" type="Texture" id=3]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="gjapi" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8
script/script = ExtResource( 2 )
__meta__ = { "_editor_icon":ExtResource( 3 ) }
private_key = null
game_id = null

[node name="ui" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 5.0
margin/right = 489.0
margin/bottom = 205.0
alignment = 0

[node name="username" type="LineEdit" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 482.0
margin/bottom = 24.0
text = "username"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="token" type="LineEdit" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 482.0
margin/bottom = 52.0
text = "token"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="auth" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 56.0
margin/right = 482.0
margin/bottom = 76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Authenticate"
flat = false

[node name="open_s" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 482.0
margin/bottom = 100.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Open session"
flat = false

[node name="close_s" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 104.0
margin/right = 482.0
margin/bottom = 124.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close session"
flat = false

[node name="list_trophies" type="Button" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 482.0
margin/bottom = 148.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Make trophies list(if your game has any)"
flat = false

[node name="response" type="Label" parent="."]

rect/min_size = Vector2( 0, 50 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 299.0
margin/right = 483.0
margin/bottom = 596.0
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="trophies" type="ItemList" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 498.0
margin/top = 2.0
margin/right = 1015.0
margin/bottom = 593.0

[node name="downloader" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8

[connection signal="pressed" from="ui/auth" to="." method="_on_auth_pressed"]

[connection signal="pressed" from="ui/open_s" to="." method="_on_open_s_pressed"]

[connection signal="pressed" from="ui/close_s" to="." method="_on_close_s_pressed"]

[connection signal="pressed" from="ui/list_trophies" to="." method="_on_list_trophies_pressed"]

[connection signal="request_completed" from="downloader" to="." method="_on_downloader_request_completed"]


